@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <name>Axon Testing - Parent</name>
   <description>A set of tools to write even more effective tests for systems built with Axon Framework.</description>
@@ -19,8 +19,6 @@
   <properties>
     <!-- JVM -->
     <java.version>11</java.version>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
     <kotlin.version>1.8.22</kotlin.version>
 
     <!-- LIBS -->
@@ -33,6 +31,7 @@
     <junit.version>4.13.2</junit.version>
     <junit5.version>5.9.3</junit5.version>
     <dom4j.version>2.1.4</dom4j.version>
+    <jaxen.version>1.2.0</jaxen.version>
     <assertj.version>3.24.2</assertj.version>
 
     <!-- MAVEN -->
@@ -108,6 +107,22 @@
     </dependencies>
   </dependencyManagement>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
   <build>
     <defaultGoal>clean package</defaultGoal>
     <pluginManagement>
@@ -123,24 +138,14 @@
           <groupId>org.jetbrains.kotlin</groupId>
           <artifactId>kotlin-maven-plugin</artifactId>
           <version>${kotlin.version}</version>
-          <executions>
-            <execution>
-              <id>compile</id>
-              <goals>
-                <goal>compile</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>test-compile</id>
-              <goals>
-                <goal>test-compile</goal>
-              </goals>
-            </execution>
-          </executions>
           <configuration>
-            <jvmTarget>11</jvmTarget>
-            <apiVersion>1.9</apiVersion>
-            <languageVersion>1.9</languageVersion>
+            <jvmTarget>${java.version}</jvmTarget>
+            <apiVersion>1.8</apiVersion>
+            <languageVersion>1.8</languageVersion>
+            <args>
+              <arg>-Xjsr305=strict</arg>
+              <arg>-Xjvm-default=all-compatibility</arg>
+            </args>
             <compilerPlugins>
               <plugin>spring</plugin>
               <plugin>all-open</plugin>
@@ -148,11 +153,35 @@
             <pluginOptions>
               <option>all-open:annotation=io.holixon.axon.testing.jgiven.AxonJGivenStage</option>
             </pluginOptions>
-            <args>
-              <arg>-Xjsr305=strict</arg>
-              <arg>-Xjvm-default=all-compatibility</arg>
-            </args>
           </configuration>
+          <executions>
+            <execution>
+              <id>compile</id>
+              <phase>compile</phase>
+              <goals>
+                <goal>compile</goal>
+              </goals>
+              <configuration>
+                <sourceDirs>
+                  <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                  <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                </sourceDirs>
+              </configuration>
+            </execution>
+            <execution>
+              <id>test-compile</id>
+              <phase>test-compile</phase>
+              <goals>
+                <goal>test-compile</goal>
+              </goals>
+              <configuration>
+                <sourceDirs>
+                  <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
+                  <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                </sourceDirs>
+              </configuration>
+            </execution>
+          </executions>
           <dependencies>
             <dependency>
               <groupId>org.jetbrains.kotlin</groupId>
@@ -168,8 +197,9 @@
           <version>3.11.0</version>
           <configuration>
             <encoding>${project.build.sourceEncoding}</encoding>
-            <source>${maven.compiler.source}</source>
-            <target>${maven.compiler.target}</target>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
+            <release>${java.version}</release>
           </configuration>
           <executions>
             <!-- Replacing default-compile as it is treated specially by maven -->
@@ -195,9 +225,6 @@
               <goals>
                 <goal>testCompile</goal>
               </goals>
-              <configuration>
-                <skip>${skipTests}</skip>
-              </configuration>
             </execution>
           </executions>
         </plugin>
@@ -253,12 +280,21 @@
               <goals>
                 <goal>prepare-agent</goal>
               </goals>
+              <configuration>
+                <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                <propertyName>surefireArgLine</propertyName>
+              </configuration>
             </execution>
             <execution>
-              <id>report-unit-test</id>
+              <id>post-unit-test</id>
+              <phase>test</phase>
               <goals>
                 <goal>report</goal>
               </goals>
+              <configuration>
+                <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+              </configuration>
             </execution>
           </executions>
         </plugin>
@@ -277,8 +313,7 @@
               <include>**/*Test_*.java</include>
               <include>**/*Tests_*.java</include>
             </includes>
-            <argLine>-Djava.awt.headless=true ${argLine} -XX:+StartAttachListener -Xmx1024m -XX:MaxPermSize=256m</argLine>
-            <argLine>${surefireArgLine}</argLine>
+            <argLine>-Djava.awt.headless=true ${surefireArgLine} -XX:+StartAttachListener -Xmx1024m</argLine>
             <systemPropertyVariables>
               <slf4j.version>1.7.30</slf4j.version>
               <log4j.version>2.13.3</log4j.version>
@@ -446,6 +481,26 @@
             </execution>
           </executions>
         </plugin>
+        <!-- Source from Kotlin -->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>3.4.0</version>
+          <executions>
+            <execution>
+              <id>add-kotlin-source</id>
+              <phase>generate-sources</phase>
+              <goals>
+                <goal>add-source</goal>
+              </goals>
+              <configuration>
+                <sources>
+                  <source>${project.basedir}/src/main/kotlin</source>
+                </sources>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -461,15 +516,35 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.jetbrains.kotlin</groupId>
+        <artifactId>kotlin-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
   <profiles>
 
-    <!--
-    Profile creating all artifacts: JARs, POMs, Sources, JavaDoc and all signatures.
-    -->
     <profile>
+      <!--
+      Example module, should be skipped during release
+      -->
+      <id>example</id>
+      <activation>
+        <property>
+          <name>!skipExamples</name>
+        </property>
+      </activation>
+      <modules>
+        <module>examples</module>
+        <module>lib</module>
+      </modules>
+    </profile>
+
+    <profile>
+      <!--
+      Profile creating all artifacts: JARs, POMs, Sources, JavaDoc and all signatures.
+      -->
       <id>release</id>
       <activation>
         <property>
@@ -481,6 +556,10 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
           </plugin>
           <plugin>
             <groupId>org.jetbrains.dokka</groupId>
@@ -498,21 +577,6 @@
       </build>
     </profile>
 
-    <profile>
-      <!--
-      Example module, should be skipped during release
-      -->
-      <id>example</id>
-      <activation>
-        <property>
-          <name>!skipExamples</name>
-        </property>
-      </activation>
-      <modules>
-        <module>examples</module>
-        <module>lib</module>
-      </modules>
-    </profile>
   </profiles>
 
   <!-- deploy and release configuration -->
@@ -564,6 +628,9 @@
       </roles>
     </developer>
   </developers>
+    <!--
+    Profile creating all artifacts: JARs, POMs, Sources, JavaDoc and all signatures.
+    -->
 
   <!-- License Stuff -->
   <inceptionYear>2021</inceptionYear>
